fixed overflow-y

--- a/src/app/tenders/open-tenders/open-tenders.component.scss
+++ b/src/app/tenders/open-tenders/open-tenders.component.scss
@@ -22,7 +22,8 @@ mat-panel-description{
     justify-content: space-around;
 }
 .content{
-    padding-top: 2rem;
+    overflow-y: auto;
+    height: 100%;
 }
 
 .offer-footer{
