--- a/src/app/tenders/show-tenders/show-tenders.component.scss
+++ b/src/app/tenders/show-tenders/show-tenders.component.scss
@@ -200,3 +200,9 @@
 .mat-tab-label{
   font-size: 20px !important;
 } 
+.tab{
+  height: 80%;
+}
+mat-tab-group{
+  height: 100%;
+}
